updated the intro tutorial fixed typo and added args in some functions

--- a/notebooks/spatialkfold_intro.ipynb
+++ b/notebooks/spatialkfold_intro.ipynb
@@ -7,28 +7,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from spatialkfold.blocks import spatial_blocks \n",
-    "from spatialkfold.datasets import load_ames\n",
-    "from spatialkfold.clusters import spatial_kfold_clusters \n",
-    "from spatialkfold.plotting import spatial_kfold_plot\n",
-    "from spatialkfold.stats import spatial_kfold_stats\n",
-    "\n",
+    "import geopandas as gpd\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "from sklearn import preprocessing\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import KFold \n",
+    "from sklearn.model_selection import LeaveOneGroupOut \n",
+    "from sklearn.model_selection import cross_validate\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import cm\n",
     "import matplotlib.colors as colors\n",
     "from matplotlib.colors import ListedColormap, LinearSegmentedColormap\n",
     "from mpl_toolkits.axes_grid1.inset_locator import inset_axes\n",
     "\n",
-    "import geopandas as gpd\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "\n",
-    "from sklearn import preprocessing\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import KFold \n",
-    "from sklearn.model_selection import LeaveOneGroupOut \n",
-    "from sklearn.model_selection import cross_validate"
+    "from spatialkfold.blocks import spatial_blocks \n",
+    "from spatialkfold.datasets import load_ames\n",
+    "from spatialkfold.clusters import spatial_kfold_clusters \n",
+    "from spatialkfold.plotting import spatial_kfold_plot\n",
+    "from spatialkfold.stats import spatial_kfold_stats"
    ]
   },
   {
@@ -1016,7 +1014,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# check the number of train and test of the dependent variable for each folf"
+    "# check the number of train and test of the dependent variable for each fold"
    ]
   },
   {
@@ -1026,7 +1024,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ames_clusters_stats = spatial_kfold_stats(ames_clusters, y= ames_clusters.Sale_Price, groups = ames_clusters.folds)\n"
+    "ames_clusters_stats = spatial_kfold_stats(X=ames_clusters, y= ames_clusters.Sale_Price, \n",
+    "                                          groups = ames_clusters.folds)"
    ]
   },
   {
@@ -1156,7 +1155,7 @@
    "source": [
     "### 2. Spatial Blocks\n",
     "\n",
-    "#### 2.1 spatial resampled random blocks"
+    "#### 2.1 Spatial resampled random blocks"
    ]
   },
   {
@@ -1167,7 +1166,7 @@
    "outputs": [],
    "source": [
     "# create 10 random blocks \n",
-    "ames_rnd_blocks = spatial_blocks(ames_prj, width = 1500, height = 1500, \n",
+    "ames_rnd_blocks = spatial_blocks(gdf=ames_prj, width = 1500, height = 1500, \n",
     "                                 method = 'random', nfolds = 10, \n",
     "                                 random_state = 135)"
    ]
@@ -1300,7 +1299,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ames_res_rnd_blk_stats = spatial_kfold_stats(ames_res_rnd_blk, y= ames_res_rnd_blk.Sale_Price, groups = ames_res_rnd_blk.folds)\n"
+    "ames_res_rnd_blk_stats = spatial_kfold_stats(X=ames_res_rnd_blk, y= ames_res_rnd_blk.Sale_Price, \n",
+    "                                             groups = ames_res_rnd_blk.folds)"
    ]
   },
   {
@@ -1428,7 +1428,7 @@
    "id": "0680f99c",
    "metadata": {},
    "source": [
-    "#### 2.2 continuous spatial resampled blocks \n",
+    "#### 2.2 Continuous spatial resampled blocks \n",
     "\n",
     "Two option are availble with orientation :\n",
     " - 'tb-lr' : top-bottom, left-right\n",
@@ -1450,9 +1450,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ames_cont_blocks = spatial_blocks(ames_prj, width = 1500, height = 1500, \n",
-    "                              method = 'continuous', orientation = 'tb-lr' ,\n",
-    "                              nfolds = 10, random_state = 135)"
+    "ames_cont_blocks = spatial_blocks(gdf=ames_prj, width = 1500, height = 1500, \n",
+    "                                  method = 'continuous', orientation = 'tb-lr' ,\n",
+    "                                  nfolds = 10, random_state = 135)"
    ]
   },
   {
@@ -1534,7 +1534,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ames_res_cont_blk_stats = spatial_kfold_stats(ames_res_cont_blk, y= ames_res_cont_blk.Sale_Price, groups = ames_res_cont_blk.folds)\n"
+    "ames_res_cont_blk_stats = spatial_kfold_stats(X=ames_res_cont_blk, y= ames_res_cont_blk.Sale_Price, \n",
+    "                                              groups = ames_res_cont_blk.folds)"
    ]
   },
   {
@@ -1672,9 +1673,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ames_cont_blocks_rev = spatial_blocks(ames_prj, width = 1500, height = 1500, \n",
-    "                              method = 'continuous', orientation = 'bt-rl',\n",
-    "                              nfolds = 10, random_state = 135)"
+    "ames_cont_blocks_rev = spatial_blocks(gdf=ames_prj, width = 1500, height = 1500, \n",
+    "                                      method = 'continuous', orientation = 'bt-rl',\n",
+    "                                      nfolds = 10, random_state = 135)"
    ]
   },
   {
@@ -1756,7 +1757,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ames_res_cont_blk_rev_stats = spatial_kfold_stats(ames_res_cont_blk_rev, y= ames_res_cont_blk_rev.Sale_Price, groups = ames_res_cont_blk_rev.folds)\n"
+    "ames_res_cont_blk_rev_stats = spatial_kfold_stats(X=ames_res_cont_blk_rev, y= ames_res_cont_blk_rev.Sale_Price, \n",
+    "                                                  groups = ames_res_cont_blk_rev.folds)"
    ]
   },
   {
@@ -1884,9 +1886,9 @@
    "id": "b877d68f",
    "metadata": {},
    "source": [
-    "### 3. Flotting function \n",
+    "### 3. Plotting function \n",
     "\n",
-    "visiaulise the partitioning of the data at each fold"
+    "Plot the partitioning of the data at each fold"
    ]
   },
   {
@@ -1907,7 +1909,7 @@
     }
    ],
    "source": [
-    "# checn the folds number \n",
+    "# check the folds number \n",
     "np.unique(ames_clusters.folds.values)"
    ]
   },
@@ -2022,8 +2024,8 @@
     "for i in range(1,11):\n",
     "    fig, ax = plt.subplots(1,1 , figsize= (9, 4))\n",
     "\n",
-    "    spatial_kfold_plot(ames_clusters, \n",
-    "                       ames_clusters.geometry, \n",
+    "    spatial_kfold_plot(X=ames_clusters, \n",
+    "                       geometry=ames_clusters.geometry, \n",
     "                       groups= ames_clusters.folds, \n",
     "                       fold_num = i, cmap = 'viridis', ax = ax)"
    ]
@@ -2084,7 +2086,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get the independent variable and the dependent variable\n",
+    "# Get the independent variables and the dependent variable\n",
     "X = x_copy[['Year_Built', 'type', 'Gr_Liv_Area']]\n",
     "y = ames_prj[['Sale_Price']]"
    ]
@@ -2340,10 +2342,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# initiate a linear regressor \n",
+    "# Initiate a linear regressor \n",
     "reg = LinearRegression()\n",
     "\n",
-    "# initiate a random CV\n",
+    "# Initiate a random CV\n",
     "kf = KFold(n_splits = 10, shuffle=True, random_state=123)\n",
     "\n",
     "# evaluate the model and collect the results\n",
@@ -2361,10 +2363,10 @@
     {
      "data": {
       "text/plain": [
-       "{'fit_time': array([0.00486207, 0.00482106, 0.00482321, 0.00299621, 0.00360632,\n",
-       "        0.00338984, 0.00377941, 0.00336504, 0.02797151, 0.00326514]),\n",
-       " 'score_time': array([0.00284147, 0.00248647, 0.00288367, 0.00195146, 0.0026195 ,\n",
-       "        0.03084445, 0.0026176 , 0.00260401, 0.0023849 , 0.00239348]),\n",
+       "{'fit_time': array([0.004879  , 0.00518417, 0.00534844, 0.00312448, 0.0041585 ,\n",
+       "        0.00442076, 0.00379515, 0.00405717, 0.00371456, 0.0041275 ]),\n",
+       " 'score_time': array([0.00275922, 0.02741981, 0.00343132, 0.0017662 , 0.00269175,\n",
+       "        0.00282693, 0.00267911, 0.00279617, 0.00259686, 0.00305533]),\n",
        " 'test_neg_root_mean_squared_error': array([-44622.40838673, -39772.65742074, -44832.52140754, -45450.03692245,\n",
        "        -50212.56009308, -49287.98884697, -39787.31970143, -52631.12777371,\n",
        "        -58187.6988452 , -38817.22221497]),\n",
@@ -2417,7 +2419,7 @@
    "source": [
     "#### Spatial CV:\n",
     "\n",
-    "using a Leave Region Out Cross vlidation "
+    "Using a Leave Region Out Cross vlidation "
    ]
   },
   {
@@ -2430,7 +2432,7 @@
     "# Initiate a leave group out cross valiadtion\n",
     "group_cvs =  LeaveOneGroupOut()\n",
     "\n",
-    "# evaluate the model and collect the results\n",
+    "# Evaluate the model and collect the results\n",
     "spatial_cluster_scores = cross_validate(reg, X, y.values.ravel(), \n",
     "                                scoring= ['neg_root_mean_squared_error', 'r2', 'neg_mean_absolute_error'], \n",
     "                                cv= group_cvs.split(X, y, ames_clusters.folds.values.ravel()), # spatial cross validation\n",
@@ -2446,10 +2448,10 @@
     {
      "data": {
       "text/plain": [
-       "{'fit_time': array([0.0055964 , 0.00503445, 0.00630927, 0.00380921, 0.00384545,\n",
-       "        0.00381875, 0.00377154, 0.00379586, 0.00388026, 0.00394702]),\n",
-       " 'score_time': array([0.00440931, 0.00389552, 0.02795482, 0.0026722 , 0.00272965,\n",
-       "        0.00291038, 0.00251198, 0.00278711, 0.00283003, 0.00253153]),\n",
+       "{'fit_time': array([0.00547051, 0.03074837, 0.02847767, 0.0043571 , 0.00586486,\n",
+       "        0.00380516, 0.0040915 , 0.00467753, 0.00383496, 0.00382328]),\n",
+       " 'score_time': array([0.03453135, 0.0030148 , 0.00346041, 0.00517106, 0.00275326,\n",
+       "        0.00278115, 0.0030551 , 0.00280929, 0.02810311, 0.02771306]),\n",
        " 'test_neg_root_mean_squared_error': array([-32584.4053578 , -42462.36798639, -69407.94633799, -45746.18536977,\n",
        "        -36288.31271365, -53574.0001557 , -47398.51917363, -45273.9069811 ,\n",
        "        -58390.82718082, -30799.97881478]),\n",
